--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "element-ui": "^1.2.8",
+    "store": "^2.0.4",
     "vue": "^2.2.2",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.3.0"
   },
   "devDependencies": {
