--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^1.2.8",
     "store": "^2.0.4",
     "vue": "^2.2.2",
+    "vue-quill-editor": "^2.1.2",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.3.0"
   },
